maze.lessons.maze.randommouse.RandomMouseMaze.scala.code
override def run() {
	droite()
    while(!estSurBiscuit)
    {
    	random = random2()
		if(estFaceMur)
		{
    			if(random == 0)
    			{
    				gauche()
    			}
    			if(random == 1)
    			{
    				gauche()
    			}
		}

    }
}
